Component now fires property change event when visibilty of child change. Table components now deal property with invisible children (bug 39).